--- a/package.json
+++ b/package.json
@@ -5,38 +5,65 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@angular/common": "~20.1.0",
+    "@angular/compiler": "~20.1.0",
+    "@angular/core": "~20.1.0",
+    "@angular/forms": "~20.1.0",
+    "@angular/platform-browser": "~20.1.0",
+    "@angular/platform-browser-dynamic": "~20.1.0",
+    "@angular/router": "~20.1.0",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
     "axios": "^1.6.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/core": "~20.1.0",
+    "@angular-devkit/schematics": "~20.1.0",
+    "@angular/build": "~20.1.0",
+    "@angular/cli": "~20.1.0",
+    "@angular/compiler-cli": "~20.1.0",
+    "@angular/language-service": "~20.1.0",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
+    "@nx/angular": "^21.4.0",
+    "@nx/devkit": "21.4.0",
     "@nx/eslint": "21.4.0",
     "@nx/eslint-plugin": "21.4.0",
     "@nx/jest": "21.4.0",
     "@nx/js": "21.4.0",
     "@nx/nest": "21.4.0",
     "@nx/node": "21.4.0",
+    "@nx/playwright": "21.4.0",
     "@nx/web": "21.4.0",
     "@nx/webpack": "21.4.0",
     "@nx/workspace": "21.4.0",
+    "@playwright/test": "^1.36.0",
+    "@schematics/angular": "~20.1.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^30.0.0",
     "@types/node": "~18.16.9",
+    "@typescript-eslint/utils": "^8.29.0",
+    "angular-eslint": "^20.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-playwright": "^1.6.2",
     "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
     "jest-environment-node": "^30.0.2",
+    "jest-preset-angular": "~15.0.0",
     "jest-util": "^30.0.2",
     "nx": "21.4.0",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
